minor bugfix