@@ -126,7 +126,7 @@ public class Join {
 	public Join setIndexHint(IndexHint indexHint, String mainIndex, String... moreIndex) {
 		this.indexHint = indexHint;
 		
-		this.indexNames = new ArrayList<>(List.of(mainIndex));
+		this.indexNames = new ArrayList<>(Arrays.asList(mainIndex));
 		this.indexNames.addAll(Arrays.asList(moreIndex));
 		return this;
 	}
